# 0,1,0,20201206
	Undo issue fixed for most of the Operators.
	"DoublClick" and "Ctrl+DoubleClick" for select children in object mode (Max mode)

# 0,1,0,20201126
	Accidentally created tiny primitives removing automatically.
	Undo for Create primitives remove only the last one.

# 0,1,0,20201122
	Refine tool added (insert vertex on clicked point in curves) (Curve edit mode: menu: Segment/ Refine)
	In Quad Menu Move, Rotate, Scale Setting buttion action issue fixed.
	Align Object added to menu: Object/Transform/Align Objects(BsMax).
	Hide/Unhide issue in Quad Menu fixed.

# 0,1,0,20201117
	Max like selection key map added for particle edit mode(Max mode only).
	Hair guide from curve step_key counts issue fixed.
	Node editor 3DsMax like selection short keys (Max mode only).
	Node editor 'H' and 'Ctrl + H' actions swapped for 3DsMax mode.

# 0,1,0,20201111
	Weight paint to vertex paint convertor added (for now search for "Weight to Vertex Color").
	Create Curve from hair guide tool added (for now search for "Hair Guides To Curve")

# 0,1,0,20201106
	Hair guide from Curve operator added (for now select mesh search "Hair Guides From Curve" and pick Curve)
	A Simple Camera lister added (Menu: Render > Camera Lister)

# 0,1,0,20201101
	Character lister added (for now very simple stuff but in time other tools will be add)
	Mesh edit mode 'Ctrl + M' Subdivid/MSmooth selected faces (Max mode only)

# 0,1,0,20201029
	Atach picked object in Edit mode like 3DsMax`s edit poly attach (object mode and Edit mode in Quad menu).
	Same Attach function added for Curve & Armature too.
	ObjectPicker Operator updated.
	Pivot to First Bezier point issue fixed (Ctrl + Insert in set pivot point menu).
	Bugfix.

# 0,1,0,20201028
	Default auto smooth fixed for Torus, Teapot, Monkey primitives.
	Bugfix.

# 0,1,0,20201026 and befor
	Align Objects has better UI and able to Align Objects to Bone of Armature too.
	Primitive Geometries create and update with Shade Smooth active.